kubectl_deploy/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      containers:
      - command:
        - sidekiq
        - -r
        - ./app.rb
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-apply-for-legal-aid/laa-apply-bot:pass-a-value-in
        imagePullPolicy: ""
        name: sidekiq
        resources: {}
      restartPolicy: Always
status: {}
