kubectl_deploy/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - env:
        - name: APPLY_GITHUB_REPO
          value: laa-apply-for-legal-aid
        - name: CFE_GITHUB_REPO
          value: check-financial-eligibility
        - name: GITHUB_OWNER
          value: ministryofjustice
        - name: GITHUB_REPO
          value: check-financial-eligibility
        - name: GITHUB_WAIT_SECONDS
          value: "1"
        - name: GITHUB_API_TOKEN
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: GITHUB_API_TOKEN
        - name: JOB_WORKER_URL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: JOB_WORKER_URL
        - name: SIDEKIQ_WEB_UI_PASSWORD
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: SIDEKIQ_WEB_UI_PASSWORD
        - name: SLACK_API_TOKEN
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: SLACK_API_TOKEN
        - name: SECRET_KEY_BASE
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: SECRET_KEY_BASE
        - name: ENCRYPTION_SERVICE_SALT
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: ENCRYPTION_SERVICE_SALT
        - name: SERVICE_NAME
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: SERVICE_NAME
        - name: SERVICE_EMAIL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: SERVICE_EMAIL
        - name: ROOT_URL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: ROOT_URL
        - name: PROVIDER_DETAILS_URL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: PROVIDER_DETAILS_URL
        - name: USER_OUTPUT_CHANNEL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: USER_OUTPUT_CHANNEL
        - name: ALLOWED_CHANNEL_LIST
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: ALLOWED_CHANNEL_LIST
        - name: KUBE_API_URL
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: KUBE_API_URL
        - name: KUBE_CRT
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: KUBE_CRT
        - name: KUBE_TOKEN_APPLY
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: KUBE_TOKEN_APPLY
        - name: KUBE_TOKEN_HMRC
          valueFrom:
            secretKeyRef:
              name: apply-bot-secrets
              key: KUBE_TOKEN_HMRC
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: rds
              key: database_username
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: rds
              key: database_password
        - name: POSTGRES_HOST
          valueFrom:
            secretKeyRef:
              name: rds
              key: rds_instance_address
        - name: POSTGRES_DATABASE
          valueFrom:
            secretKeyRef:
              name: rds
              key: database_name
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              name: rds
              key: url
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-apply-for-legal-aid/laa-apply-bot:pass-a-value-in
        imagePullPolicy: ""
        name: website
        ports:
        - containerPort: 4567
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
