kubectl_deploy/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      name: http
      targetPort: 6379
  selector:
    app: redis
