kubectl_deploy/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - port: 80
      name: http
      targetPort: 4567
  selector:
    app: website
status:
  loadBalancer: {}
