kubectl_deploy/website-ingress-legacy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-apply-slack-bot-ingress
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: laa-apply-slack-bot-ingress-laa-apply-bot-production-blue
spec:
  tls:
  - hosts:
    - laa-apply-slack-bot.cloud-platform.service.justice.gov.uk
  rules:
  - host: laa-apply-slack-bot.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 4567
